test/enigma/query-malformed.php.expectf
Fatal error: Uncaught exception 'Enigma\ErrorResult' with message 'ERROR:  column "aaaaa" does not exist
LINE 1: select aaaaa
               ^
' in %A